# Face-Tracking-Maya

./: CMakeLists.txt  README.md
data/: Lord_Voldemort.mtl  frontalEyes35x16.xml  ojoI.xml
include/: FaceTracker.h  MayaSocket.h  Socket.h  TrackingData.h
src/: FaceTracker.cpp  FaceTracker.mel  MayaSocket.cpp  Socket.cpp  main.cpp  testscript.mel
